[package]
name = "plr-test"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "plr"
path = "src/main.rs"

[dependencies]
plr = {git = "https://github.com/liufuyang/plr"}
structopt = "0.3"
serde_json = "1.0"

[dev-dependencies]
rand = "0.8.1"
